Bug squashing

--- a/src/Components/Post-Login/Playlist/List/ChatWindow/ChatWindow.scss
+++ b/src/Components/Post-Login/Playlist/List/ChatWindow/ChatWindow.scss
@@ -100,7 +100,6 @@
 
 @mixin message-reset{
   display: flex;
-  flex: 1 1 auto;
   max-width: 70%;
   margin: 2.5px 0;
   
